# pbdADIOS

./: .Rhistory  .gitignore  ChangeLog  DESCRIPTION  INSTALL  NAMESPACE  README.md  adios_r.map  cleanup  configure  configure.ac  note.txt  reconf
.Rproj.user/D4B7D66B/: cpp-complilation-config  cpp-definition-cache
.Rproj.user/D4B7D66B/pcs/: files-pane.pper  windowlayoutstate.pper
R/: adios-package.r  adios_inq_var.r  adios_read.r  adios_read_str.r  adios_util.r  adios_write.r  adios_write_str.r  bp.R  bp.stage.R  bp_bak.R  bpls.R  package-pbdADIOS.R  read.R  state.R  test_heat.r  test_read.r  util.R  utils.r  write.R  zzz.R  zzz.r
R/sgn_writer/: adios_write_str.r  test_write.r
R/writer_xml/: adios_file.r  adios_group.r
R/writer_xml_R/: adios_file.r  adios_group.r  adios_util.r  adios_write.r
autom4te.cache/: output.1  requests  traces.0  traces.1
demo/: 00Index  Read_demo.R  Write_demo.R  attributes.R  bp.demo.R  bp.read.demo.R  bp.stage.read.demo.R  bp.write.demo.R  bp.write_demo.R  bpls_demo.R  datatype.R  demo.R  dump_demo.R  test_heat.r  write_string.R
demo/extra_ex/: Write_demo.R  attributes.R  test_heat.r  test_read.r  test_write.r  write_string.R
inst/: CITATION  attributes.bp  bptest.bp  heat.bp  write_read_1.bp
inst/extra/data/: adios_globaltime.bp
man/: 00-pbdADIOS-package.Rd  adios.advance.step.Rd  adios.attr.read.Rd  adios.close.Rd  adios.declare.group.Rd  adios.define.var.Rd  adios.errno.Rd  adios.finalize.Rd  adios.free.varinfo.Rd  adios.group.size.Rd  adios.init.noxml.Rd  adios.inq.var.Rd  adios.inq.var.blockinfo.Rd  adios.inq.var.byid.Rd  adios.open.Rd  adios.perform.reads.Rd  adios.read.Rd  adios.read.api.Rd  adios.read.close.Rd  adios.read.finalize.method.Rd  adios.read.init.method.Rd  adios.read.open.Rd  adios.release.step.Rd  adios.schedule.read.Rd  adios.select.method.Rd  adios.selection.boundingbox.Rd  adios.set.max.buffersize.Rd  adios.var.attr.read.Rd  adios.write.Rd  adios.write.api.Rd  bp.add.Rd  bp.attr.Rd  bp.create.Rd  bp.dump.Rd  bp.flush.Rd  bp.read.Rd  bp.stage.read.Rd  bp.var.Rd  bp.write.Rd  bpls.Rd  (+8 more)
src/: Makefile.sh  Makevars.in  R_adios.h  R_adios_read.c  R_adios_util.c  R_adios_write.c  R_bpls.c  R_bpls.h  R_bpls1.c  R_bpls_bak.c  R_dump.c  R_dump.h  R_dump_bak.c  R_dump_v1.c  R_read.c  R_read.h  R_read_bak.h  R_read_v1.c  R_stage_read.c  R_stage_read.h  R_write.c  R_write.h  R_write_bak.c  finalizer.h  finalizers.c  pbdADIOS_native.c
src/sgn_writer/: SGN_R_adios_write.c  SGN_R_adios_write_wrapper.c  compile
src/writer_xml/: R_adios.h  R_adios_file.c  R_adios_group.c  R_adios_read.c  R_adios_util.c  R_adios_write.c
tests/: test_heat.r  test_write.r
vignettes/: build_pdf.sh  pbdADIOS.Rmd  pbdADIOS.Rnw  pbdADIOS.html  rebuild
vignettes/include/: 00-acknowledgement.tex  pbdADIOS.bib
